@@ -90,7 +90,8 @@ int JackAudioDriver::Attach()
             jack_error("driver: cannot register port for %s", buf);
             return -1;
         }
-        port = fGraphManager->GetPort(port_index);
+	    port = fGraphManager->GetPort(port_index);
+		port->Rename("system:capture_%d", i + 1);
         port->SetLatency(fEngineControl->fBufferSize + fCaptureLatency);
         fCapturePortList[i] = port_index;
         JackLog("JackAudioDriver::Attach fCapturePortList[i] %ld = \n", port_index);
@@ -104,7 +105,8 @@ int JackAudioDriver::Attach()
             jack_error("driver: cannot register port for %s", buf);
             return -1;
         }
-        port = fGraphManager->GetPort(port_index);
+	    port = fGraphManager->GetPort(port_index);
+		port->Rename("system:playback_%d", i + 1);
         port->SetLatency(fEngineControl->fBufferSize + fPlaybackLatency);
         fPlaybackPortList[i] = port_index;
         JackLog("JackAudioDriver::Attach fPlaybackPortList[i] %ld = \n", port_index);
@@ -222,27 +224,6 @@ int JackAudioDriver::ProcessSync()
         fGraphManager->ResumeRefNum(fClientControl, fSynchroTable);
     }
     return 0;
-}
-
-void JackAudioDriver::RenamePorts()
-{
-	JackPort* port;
-	char buf[JACK_CLIENT_NAME_SIZE + JACK_PORT_NAME_SIZE];
-	int i;
-	
-	for (i = 0; i < fCaptureChannels; i++) {
-		port = fGraphManager->GetPort(fCapturePortList[i]);
-		port->SetAlias(port->GetName());
-		snprintf(buf, sizeof(buf) - 1, "system:capture_%d", i + 1);
-		port->SetFullName(buf);
-    }
-
-    for (i = 0; i < fPlaybackChannels; i++) {
-		port = fGraphManager->GetPort(fPlaybackPortList[i]);
-		port->SetAlias(port->GetName());
-		snprintf(buf, sizeof(buf) - 1, "system:playback_%d", i + 1);
-		port->SetFullName(buf);
-    }
 }
 
 void JackAudioDriver::NotifyXRun(jack_time_t callback_usecs)
