@@ -55,8 +55,6 @@ class EXPORT JackAudioDriver : public JackDriver
 
         int ProcessAsync();
         int ProcessSync();
-		
-		void RenamePorts();
 
     public:
 
