@@ -83,12 +83,7 @@ class JackThreadedDriver : public JackDriverClientInterface, public JackRunnable
             return fDriver->Detach();
         }
 		
-		virtual void RenamePorts()
-		{
-            fDriver->RenamePorts();
-        }
-
-        virtual int Read()
+		virtual int Read()
         {
             return fDriver->Read();
         }
